# CROW-Server

./: README.md  pyproject.toml
src/server/: __main__.py  base.html
src/server/webapp/frontend/frontend/: settings.py  urls.py
src/server/webapp/frontend/ui/: urls.py  views.py
src/server/webapp/frontend/ui/static/: calendar.css  style.css
src/server/webapp/frontend/ui/templates/: calendar.html  test.html
src/server/websocket_communication/: websocket_util.py
